// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Offcanvas renders correctly 1`] = `
<jest>
  <div
    class="bcl-offcanvas offcanvas offcanvas-bottom"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-header"
    >
      <h4
        class="offcanvas-title bcl-heading"
      >
        An offcanvas title
      </h4>
      <button
        aria-label="Close button for the offcanvas"
        class="btn-close text-reset bcl-btn"
        data-bs-dismiss="offcanvas"
        type="button"
      />
    </div>
    <div
      class="offcanvas-body"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;

exports[`OE - Offcanvas renders correctly with body scroll support 1`] = `
<jest>
  <div
    class="bcl-offcanvas offcanvas offcanvas-bottom"
    data-bs-scroll="true"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-header"
    >
      <h4
        class="offcanvas-title bcl-heading"
      >
        An offcanvas title
      </h4>
      <button
        aria-label="Close button for the offcanvas"
        class="btn-close text-reset bcl-btn"
        data-bs-dismiss="offcanvas"
        type="button"
      />
    </div>
    <div
      class="offcanvas-body"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;

exports[`OE - Offcanvas renders correctly with extra class on body 1`] = `
<jest>
  <div
    class="bcl-offcanvas offcanvas offcanvas-bottom"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-header"
    >
      <h4
        class="offcanvas-title bcl-heading"
      >
        An offcanvas title
      </h4>
      <button
        aria-label="Close button for the offcanvas"
        class="btn-close text-reset bcl-btn"
        data-bs-dismiss="offcanvas"
        type="button"
      />
    </div>
    <div
      class="offcanvas-body body-extra-class"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;

exports[`OE - Offcanvas renders correctly with extra class on close button 1`] = `
<jest>
  <div
    class="bcl-offcanvas offcanvas offcanvas-bottom"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-header"
    >
      <h4
        class="offcanvas-title bcl-heading"
      >
        An offcanvas title
      </h4>
      <button
        aria-label="Close button for the offcanvas"
        class="btn-close text-reset close-button-extra-class bcl-btn"
        data-bs-dismiss="offcanvas"
        type="button"
      />
    </div>
    <div
      class="offcanvas-body"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;

exports[`OE - Offcanvas renders correctly with extra class on header 1`] = `
<jest>
  <div
    class="bcl-offcanvas offcanvas offcanvas-bottom"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-header header-extra-class"
    >
      <h4
        class="offcanvas-title bcl-heading"
      >
        An offcanvas title
      </h4>
      <button
        aria-label="Close button for the offcanvas"
        class="btn-close text-reset bcl-btn"
        data-bs-dismiss="offcanvas"
        type="button"
      />
    </div>
    <div
      class="offcanvas-body"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;

exports[`OE - Offcanvas renders correctly with responsive behaviour 1`] = `
<jest>
  <div
    class="bcl-offcanvas offcanvas-lg offcanvas-bottom"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-header"
    >
      <h4
        class="offcanvas-title bcl-heading"
      >
        An offcanvas title
      </h4>
      <button
        aria-label="Close button for the offcanvas"
        class="btn-close text-reset bcl-btn"
        data-bs-dismiss="offcanvas"
        type="button"
      />
    </div>
    <div
      class="offcanvas-body"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;

exports[`OE - Offcanvas renders correctly without backdrop 1`] = `
<jest>
  <div
    class="bcl-offcanvas offcanvas offcanvas-bottom"
    data-bs-backdrop="false"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-header"
    >
      <h4
        class="offcanvas-title bcl-heading"
      >
        An offcanvas title
      </h4>
      <button
        aria-label="Close button for the offcanvas"
        class="btn-close text-reset bcl-btn"
        data-bs-dismiss="offcanvas"
        type="button"
      />
    </div>
    <div
      class="offcanvas-body"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;

exports[`OE - Offcanvas renders correctly without close button 1`] = `
<jest>
  <div
    class="bcl-offcanvas offcanvas offcanvas-bottom"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-header"
    >
      <h4
        class="offcanvas-title bcl-heading"
      >
        An offcanvas title
      </h4>
    </div>
    <div
      class="offcanvas-body"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;

exports[`OE - Offcanvas renders correctly without title 1`] = `
<jest>
  <div
    class="bcl-offcanvas offcanvas offcanvas-bottom"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-header"
    >
      <button
        aria-label="Close button for the offcanvas"
        class="btn-close text-reset bcl-btn"
        data-bs-dismiss="offcanvas"
        type="button"
      />
    </div>
    <div
      class="offcanvas-body"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;

exports[`OE - Offcanvas renders correctly without title and close button 1`] = `
<jest>
  <div
    class="bcl-offcanvas offcanvas offcanvas-bottom"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-body"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;
